--- a/Edureka/Authentication/src/app/in-class-pocs/demo-validation/demo-validation-home/demo-validation-home.component.html
+++ b/Edureka/Authentication/src/app/in-class-pocs/demo-validation/demo-validation-home/demo-validation-home.component.html
@@ -5,8 +5,8 @@
   </div>
 
   <div class="container">
-    <label for="userName"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="userName" required />
+    <label for="username"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="username" required />
 
     <div ngModelGroup="passwords">
       <label for="password"><b>Password</b></label>
