--- a/Edureka/Authentication/src/app/in-class-pocs/auth/auth.component.html
+++ b/Edureka/Authentication/src/app/in-class-pocs/auth/auth.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="currentUser">
+<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="loggedinUser">
   <div class="navbar-nav">
     <a class="btn btn-success nav-item nav-link" routerLink="home">Home</a>
     <a class="btn btn-success nav-item nav-link" (click)="logout()">Logout</a>
